--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,20 @@
 ---
+import MainLayout from "../layouts/MainLayout.astro";
+import type { PokemonListResponse } from "../interfaces/pokemon-list.response";
+import PokemonCard from "../components/pokemons/PokemonCard.astro";
 
+const response = await fetch("https://pokeapi.co/api/v2/pokemon");
+const { results }: PokemonListResponse = await response.json();
+
+const title = "Pokémon Static | Home";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<MainLayout title={title}>
+    <h1 class="text-3xl">Pokémons list</h1>
+    <hr />
+    <section
+        aria-label="Pokémons list"
+        class="grid grid-cols-1 sm:grid-cols-4 md:grid-cols-5 gap-4 mt-5">
+        {results.map(({name, url}) => <PokemonCard name={name} url={url} />)}
+    </section>
+</MainLayout>
