Add path alias to folders

--- a/src/components/pokemons/PokemonCard.astro
+++ b/src/components/pokemons/PokemonCard.astro
@@ -1,6 +1,6 @@
 ---
-import type { PokemonCardResponse } from "../../interfaces/pokemon-card.response";
-import type { Result } from "../../interfaces/pokemon-list.response";
+import type { PokemonCardResponse } from "@interfaces/pokemon-card.response";
+import type { Result } from "@interfaces/pokemon-list.response";
 
 interface Props extends Result {
     isBig?: boolean;
