--- a/src/pages/pokemons/[page].astro
+++ b/src/pages/pokemons/[page].astro
@@ -1,8 +1,8 @@
 ---
 import type { GetStaticPaths } from "astro";
-import MainLayout from "../../layouts/MainLayout.astro";
-import type { PokemonListResponse } from "../../interfaces/pokemon-list.response";
-import PokemonCard from "../../components/pokemons/PokemonCard.astro";
+import MainLayout from "@layouts/MainLayout.astro";
+import type { PokemonListResponse } from "@interfaces/pokemon-list.response";
+import PokemonCard from "@components/pokemons/PokemonCard.astro";
 
 export const getStaticPaths = (async ({ paginate }) => {
     const response = await fetch("https://pokeapi.co/api/v2/pokemon?limit=151");
