--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import MainLayout from "../layouts/MainLayout.astro";
-import type { PokemonListResponse } from "../interfaces/pokemon-list.response";
-import PokemonCard from "../components/pokemons/PokemonCard.astro";
+import MainLayout from "@layouts/MainLayout.astro";
+import type { PokemonListResponse } from "@interfaces/pokemon-list.response";
+import PokemonCard from "@components/pokemons/PokemonCard.astro";
 
 const response = await fetch("https://pokeapi.co/api/v2/pokemon");
 const { results }: PokemonListResponse = await response.json();
