Add metatags for google - Fix typo

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,6 @@
 ---
 import { ViewTransitions } from 'astro:transitions';
-import { siteInfo } from 'src/consts/site-info';
+import { siteInfo } from "src/constants/site-info";
 
 interface Props {
     title?: string;
