Create navbar and implement favorites pokemon with LS

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import MainLayout from "@layouts/MainLayout.astro";
 import type { PokemonListResponse } from "@interfaces/pokemon-list.response";
 import PokemonCard from "@components/pokemons/PokemonCard.astro";
+import Title from "@components/shared/Title.astro";
 
 const response = await fetch("https://pokeapi.co/api/v2/pokemon");
 const { results }: PokemonListResponse = await response.json();
@@ -10,8 +11,7 @@ const title = "Pokémon Static | Home";
 ---
 
 <MainLayout title={title}>
-    <h1 class="text-3xl">Pokémons list</h1>
-    <hr />
+    <Title>Pokémons list</Title>
     <section
         aria-label="Pokémons list"
         class="grid grid-cols-1 sm:grid-cols-4 md:grid-cols-5 gap-4 mt-5">
