--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,7 +2,7 @@
 import { ViewTransitions } from "astro:transitions";
 import { siteInfo } from "src/constants/site-info";
 import { AstroSeo } from "@astrolib/seo";
-import type { ACTION_ERROR_CODES } from "astro:actions";
+import NavBar from "@components/shared/NavBar.astro";
 
 interface Props {
     title?: string;
@@ -33,8 +33,9 @@ const { title = siteInfo.title, description = siteInfo.description, image } = As
 
         <ViewTransitions />
     </head>
-    <body class="bg-slate-800 text-slate-100 m-auto max-w-3xl">
-        <main class="mt-10">
+    <body class="bg-slate-800 text-slate-100 flex flex-col min-h-screen">
+        <NavBar />
+        <main class="mt-10 mx-auto flex-grow w-full max-w-4xl px-4">
             <slot />
         </main>
     </body>
