Create Counter Solid JS component using persistence (astro islands)

--- a/src/components/shared/NavBar.astro
+++ b/src/components/shared/NavBar.astro
@@ -1,8 +1,10 @@
 ---
 const links = [
-    { href: "/", text: "Pokémons list" },
-    { href: "/pokemons/1", text: "Paginated Pokémons" },
-    { href: "/favorites", text: "Favorite Pokémons" },
+    { href: "/", text: "List" },
+    { href: "/pokemons/1", text: "Paginattion" },
+    { href: "/favorites", text: "Favorite" },
+    { href: "/islands", text: "Islands" },
+    { href: "/islands/1", text: "Islands 1" },
 ];
 
 const currentPath = Astro.url.pathname;
