Create component for favorite pokemons management

--- a/src/components/shared/NavBar.astro
+++ b/src/components/shared/NavBar.astro
@@ -1,7 +1,7 @@
 ---
 const links = [
     { href: "/", text: "List" },
-    { href: "/pokemons/1", text: "Paginattion" },
+    { href: "/pokemons/1", text: "Pagination" },
     { href: "/favorites", text: "Favorite" },
     { href: "/islands", text: "Islands" },
     { href: "/islands/1", text: "Islands 1" },
