--- a/src/pages/favorites/index.astro
+++ b/src/pages/favorites/index.astro
@@ -1,8 +1,11 @@
 ---
 import MainLayout from "@layouts/MainLayout.astro";
 import Title from "@components/shared/Title.astro";
+import { FavoritePokemons } from "@components/pokemons/FavoritePokemons";
 ---
 
 <MainLayout title="Favorite Pokémons">
     <Title>Favorite Pokémons</Title>
+
+    <FavoritePokemons client:only="solid-js" />
 </MainLayout>
